Minor bug fixes.
